Fixed issue where footer was overlapping content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,14 @@ body {
     background: #000;
     color: #fff;
     font-family: Hind, Arial, sans-serif;
+    position: relative;
 }
 
 footer {
     background: rgb(63, 63, 63);
     position:absolute;
-    bottom: 0;
     left: 0;
+    margin-top: 20px;
 }
 
 footer p {
